--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         <div class="row">
           <div class="col-md-4 text-center d-flex mx-auto ftco-animate">
             <a
-              href="https://github.com/Praveen-SPK/Portfolio"
+              href="https://github.com/Praveen-SPK/MyPortfolio.git"
               target="_blank"
               class="services-1 shadow"
             >
